formatting and line alignment fixes.

--- a/css/custom.css
+++ b/css/custom.css
@@ -327,8 +327,10 @@ lg[type = 'sonnet'] l[n = '5'],
 lg[type = 'sonnet'] l[n = '6'], 
 lg[type = 'sonnet'] l[n = '9'],  
 lg[type = 'sonnet'] l[n = '10'],
-lg[type = 'canzone']  l[n = '5'],
-lg[type = 'canzone'] l[n = '6'],
+lg[type = 'canzone']  l[n = '5'], 
+lg[type = 'canzone']  l[n = '6'],
+lg[type = 'canzone']  l[n = '5'], 
+lg[type = 'canzone']  l[n = '6'],
 lg[type = 'canzone'] lg[type = 'trplhemi'] l[n = '7'],
 /* lg[type = 'canzone'] l[n = '10'], */
 lg[type = 'canzone'] lg[type = 'trplhemi'] l[n = '15'],
@@ -339,12 +341,18 @@ lg[type = 'canzone'] lg[type = 'dblhemi'] l[n = '21']:last-of-type,
 lg[type = 'canzone'] lg[type = 'trplhemi'] l[n = '25'],
 lg[type = 'canzone'] lg[type = 'trplhemi'] l[n = '26'],
 lg[type = 'canzone'] lg[type = 'trplhemi'] l[n = '27'],
-lg[type = 'canzone'] l[n = '35'],
-lg[type = 'canzone'] l[n = '36'],
+lg[type = 'canzone'] lg[type = 'dblhemi'] l[n = '35'],
+lg[type = 'canzone'] lg[type = 'dblhemi'] l[n = '36'],
 lg[type = 'canzone'] lg[type = 'trplhemi'] l[n = '37'],
 lg[type = 'canzone'] lg[type = 'trplhemi'] l[n = '45'],
 lg[type = 'canzone'] lg[type = 'trplhemi'] l[n = '46'],
-lg[type = 'canzone'] lg[type = 'trplhemi'] l[n = '47']
+lg[type = 'canzone'] lg[type = 'trplhemi'] l[n = '47'],
+lg[type = 'canzone'] lg[type = 'dblhemi'] l[n = '50'],
+lg[type = 'canzone'] lg[type = 'dblhemi'] l[n = '51'],
+lg[type = 'canzone'] lg[type = 'dblhemi'] l[n = '65'],
+lg[type = 'canzone'] lg[type = 'dblhemi'] l[n = '66'],
+lg[type = 'canzone'] lg[type = 'dblhemi'] l[n = '80'],
+lg[type = 'canzone'] lg[type = 'dblhemi'] l[n = '81']
 /* lg[type = 'canzone'] l[n = '30'] */
 {
     position:relative;
